working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1547,13 +1547,52 @@
           <p>Taishodon appears between 10~12F. If you have a Grass Toss Staff, go ahead and insert Strength Grass<br>or Happy Grass and swing it at a Taishodon to have it reflect the magic bolt back at Shiren.<br>Don't forget to eat a Boost Grass beforehand, if you happen to have one on hand.</p>
           <p>Kengo (11~12F) can be troublesome as an emeny, but they're an excellent monster that can be used to collect<br>shields if you have a Posession Staff or Monster Pot. However, you'll likely want to level Kengo up into an Iai first<br>so that you can also collect weapons, along with having higher stats so they won't be defeated as easily.<br>You could also go for Shihan instead of Iai in hopes of obtaining a Scout Bracelet.</p>
           <h3 id="floor_13_15">13~15F</h3>
-          <p></p>
+          <p>Monsters include Wolf Droid (13~15F), Pop Tank (13~15F), Water Strider (13~15F), and Bored Kappa (14~19F).<br>Bombs and items can fly at you from outside of view when you're in a room, so never let your guard down.<br>Don't let a monster defeat another one with explosion damage, resulting in Gorilla Bot, Bear Borg, or Cranky Tank.</p>
+          <p>Hurry through the floor to pick up items before Bored Kappas and Water Striders have a chance to pick them all up.<br>Seal Staff can prevent Water Striders from throwing their items, and Swap Staff is effective against Bored Kappas.<br>If you don't have any staves, items like Decoy and Slumber scrolls can be used to save items.</p>
+          <p>Cranky Tank can be sealed by splashing water on it from a Water Pot, and has very low physical attack strength,<br>so intentionally level Pop Tanks into Cranky Tanks for 2300 experience each if you have a Water Pot or Seal Staff.<br>It's also possible to defeat Cranky Tank by throwing 950 or more Gitan at it, if you don't have a Water Pot.</p>
+          <p>Gorilla Bot and Bear Borg have high attack strength, so sealing them won't do much in terms of weakening them.<br>The best way to deal with them would be to swing an Unlucky Staff, or throw either a Twisty Grass or Unlucky Seed.</p>
+          <p>Twisty Hani (14~19F) provides 300 experience when defeated, and has a 35% item drop rate.<br>However, it has 50 HP and can lower Shiren's level by 1 each time it dances, so be careful when hunting them.<br>It's best to have a Level Lock Bracelet equipped, but items like Seal Staff and Drain Buster can also be used.<br>Schubell (15~24F) can be utilitzed to summon Twisty Hanis for experience and items, which will be explained later.</p>
+          <p>Both Mixer and Mixermon appear between 12~15F, providing many synthesis opportunities.<br>Monsters with high item drops rates also appear, including Shaaga (16%), Goat Pastor (16%), Bored Kappa (25%),<br>and Bone Dragon (32%), so it's good to linger until the wind blows using the riceballs you obtained earlier<br>in hopes of obtaining useful items that can be synthesized.</p>
+          <p>However, Monster Houses between 13~15F are dangerous, since they can result in Pop Tanks leveling up<br>into Cranky Tanks, Twisty Hanis waking up, items being thrown, etc.</p>
           <h3 id="floor_16_21">16~21F</h3>
-          <p></p>
+          <p>Bored Kappas and Twisty Hanis continue to appear until 19F, and new monsters include Whirlwind (16~18F),<br>Gyadon (17~18F), Chainhead (17~19F), Rock Beast (18~21F), Tiger Hurler and Patient Bag (19~21F).</p>
+          <p>Whirlwind moves at double speed, so if your shield's upgrade value is low or lacks 弟 seals, you'll have a hard time.<br>It can potentially level up into a Kamikaze or Typhoon if it defeats Snacky as well, creating a major problem.<br>Kamikaze moves at triple speed, so you'll want to avoid hallways unless you have a Scout Bracelet.<br>Typhoons move at triple speed and can pass through walls, so again, hallways should be avoided.<br>It's best to wait for them in the middle of a room, and use items to deal with them.</p>
+          <p>Gyadon can pluck a staff from your inventory and lower its number of uses by 1.<br>You can protect your staves by keeping them inside pots, but avoid inserting them into a Degrade Pot.<br>If a staff is already at 0 uses such as a Balance Staff, there's no need to keep them inside a pot.<br>They only have 40 HP, so you should be able to defeat them in one hit if you've increased your strength.</p>
+          <p>Avoid moving in ways which allow Chainheads to hit other monsters, since Gigahead has a<br>ridiculously high attack stat and can be difficult to deal with if a Chainhead levels up into one.<br>Rock Beast can paralyze Shiren for 3 turns, sometimes resulting in a collapse if there are other monsters nearby.</p>
+          <p>Tiger Hurler can throw Shiren onto hidden traps, and can also potentially throw Shiren into a Monster House.<br>Use arrows or seal it from a distance if possible to avoid giving it a chance to use its special attack.</p>
+          <p>Patient Bag (120 HP) stops moving when its HP drops below 31, and explodes once its HP drops below 11.<br>The explosion has the power of a Big Landmine, so use arrows or punches to make sure it doesn't explode.<br>That said, a Patient Bag's explosion can be used to one-shot monsters.</p>
           <h4 id="floor_16_21_twisty_hani">Twisty Hani Hunting</h4>
-          <p></p>
+          <p>Let Schubell summon monsters, aiming for Twisty Hani which provides 300 experience and a 35% item drop rate.<br>Other monsters with high item drop rates include Bored Kappa (25%) and Porky (15%, Porky Stone).<br>However, there are many dangerous monsters, so this should be avoided in normal runs.</p>
+          <dl>
+            <dt>Necessary Items</dt>
+            <dd>
+              Razor Wind or a weapon with the 三 seal.<br>
+              Poison Arrow Trap to lower Schubell's strength to 0.<br>
+              Pickaxe or Cannonballs to shape the terrain.
+            </dd>
+          </dl>
+          <p>Hit Schubell with a Poison Arrow Trap between 15~19F, and lure it into a room with a dead end.<br>Then dig out a wall as shown below, and simply defeat the summoned monsters.<br>It's best to do this between 16~18F where there are fewer monsters with dangerous abilities.</p>
+          </pre>
+          <pre class="dungeon_diagram">
+
+    ■■■■■■■■■
+    ■■■□□□□□■  S:Shiren
+    ■■◇□□□□□■  B:Schubell
+    □SB□□□□□■  ◇:Dig this wall
+    ■■■□□□□□■
+    ■■■■■■■■■
+          </pre>
+          <p>Dangerous monsters:</p>
+          <ul>
+            <li>14~15F - Water Strider (Throws items)</li>
+            <li>14~19F - Bored Kappa (Throws items, but has a high item drop rate)</li>
+            <li>17~19F - Bat Kangaroo (May increase efficiency if it increases Schubell's movement speed)</li>
+            <li>17~19F - Porky (Can hit Shiren from a distance with its special attack)</li>
+            <li>19F - Tiger Tosser (Throws Schubell and other monsters)</li>
+            <li>19F - Patient Bag (Lose both Schubell and items if it explodes)</li>
+          </ul>
           <h3 id="floor_22_29">22~29F</h3>
-          <p></p>
+          <p>Monsters include Monarch Tusker (22~26F), Dragon (22~28F), Demon Scorpion (22~29F), Mixermon (26~40F).<br>This floor range is among the most difficult sections of this dungeon, with some players going as far as saying<br>the rest of the dungeon is smooth sailing until 99F in comparison.</p>
           <h4 id="floor_22_29_monsters_1">Monsters (22~24F)</h4>
           <p></p>
           <h4 id="floor_22_29_monsters_2">Monsters (25~29F)</h4>
