working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -82,7 +82,7 @@
                   <ul>
                     <li><a href="#boss_oni_stats">Monsters (22~24F)</a></li>
                     <li><a href="#boss_oni_stats">Monsters (25~29F)</a></li>
-                    <li><a href="#boss_oni_stats">Golden Interval</a></li>
+                    <li><a href="#boss_oni_stats">Regarding the Golden Interval</a></li>
                   </ul>
                   <li><a href="#hoof_rock_wall">30~39F</a></li>
                   <ul>
@@ -1594,19 +1594,37 @@
           <h3 id="floor_22_29">22~29F</h3>
           <p>Monsters include Monarch Tusker (22~26F), Dragon (22~28F), Demon Scorpion (22~29F), Mixermon (26~40F).<br>This floor range is among the most difficult sections of this dungeon, with some players going as far as saying<br>the rest of the dungeon is smooth sailing until 99F in comparison.</p>
           <h4 id="floor_22_29_monsters_1">Monsters (22~24F)</h4>
-          <p></p>
+          <p>Demon Scorpion only slow Shiren when it's next to him, so 1-on-1 fights are relatively safe if you defeat it in 2 hits.<br>However, Monarch Tusker can slow you from a distance if you're lined up with it, and can swing its staff again<br>to paralyze you, often leading to a collapse if there are other monsters nearby.</p>
+          <p>The ideal solution would be to equip a shield with the 山 (Echo Shield) seal to reflect its magic,<br>but it's quite rare to have obtained and synthesized one at this point in the dungeon.<br>Other seals like 弟 (Otogiriso), バ (Counter Shield), 眠 (Slumber Scroll) offer some defense when paralyzed.<br>Even a simple 1-on-1 fight with a Monarch Tusker can be dangerous, so don't hesitate to use items.<br>Good items to use include Seal Staff, Decoy Scroll, Slumber Scroll, Swift Grass, and Warp Grass.<br>The ド seal (Drain Buster) is also effective against Demon Scorpions, since it's a Drain type monster.</p>
+          <p>Keep an eye on your remaining HP when fighting Dragons (and Sky Dragons from 25F).<br>It may take 4~5 hits to defeat one if you haven't increased your strength / haven't upgraded your weapon.<br>Use items like Otogiriso when your HP gets low, and equip a Dragon Killer if you obtained one in a Golden Interval.<br>They have a high item drop rate, but it's often not worth the risk if you don't have the strength to defeat them quickly.</p>
           <h4 id="floor_22_29_monsters_2">Monsters (25~29F)</h4>
-          <p></p>
-          <h4 id="floor_22_29_golden">Golden Interval</h4>
+          <p>Monsters include Super Gazer, Stone Golem, Skull Dragon, Sky Dragon, Tonosamadon, and Explosion Ninja.<br>Monster stats ramp up here, and it can take at least 3 hits to defeat any of them without increased strength.<br>Super Gazer's hypnosis adds to the already troublesome Monarch Tusker and Sky Dragon.<br>It's best to take each fight carefully, as you're likely to be worn down if you simply try to muscle your way through.</p>
+          <p>Tonosamadon reflects projectiles and thrown items, so never shoot arrows or throw stones at it.<br>A reflected projectile can deal upwards of 100+ damage based on Shiren's level and strengh.<br>Explosion Ninja places a Big Landmine on the ground when defeated, which can be used to one-shot monsters.<br>However, you'll take damage equal to 3/4 of your current HP, so it's good to eat an Otogiriso after stepping on one.</p>
+          <p>All said and done, this floor range isn't too bad if you've sufficiently upgraded your weapon and shield.<br>Mixermons make a second appearance between 26~40F, so synthesize and strengthen your equipment again.<br>If you feel like your equipment is underpowered, go ahead and skip exploring 25F where Mixermon doesn't appear.</p>
+          <h4 id="floor_22_29_golden">Regarding the Golden Interval</h4>
+          <p>There's a 30% chance for Golden Stairs to be generated inside a wall between 24~29F,<br>so read Wall Collapse Scrolls if you have them after you've explored the floor and defeated some monsters.<br>There's a pretty decent chance of entering a Golden Interval if you managed to save up 2~3 scrolls,<br>and it's best to read them between 26~29F so that you can make use of Mixermons beforehand.<br>You'll also want to read them while on top of the normal stairs in case a Sky Dragon is present.</p>
+          <p>Lashaaga (normally found on 70F+) appears from 3F inside this Golden Interval, so use items to deal with them.<br>See the Golden Interval section for more details.</p>
           <p></p>
           <h3 id="floor_30_39">30~39F</h3>
-          <p></p>
           <h4 id="floor_30_39_monsters">Monsters</h4>
-          <p></p>
+          <p>Monsters include Armordillo Pop (30~39F), Orcan (30~43F), Archdragon (30~59F), Adm. Spearfish (30~59F),<br>and Rancor Slug (32~40F) among others.</p>
+          <p>Archdragon can breathe fire that deals 35 damage from anywhere on the current floor, even if you're inside a wall.<br>A shield with 竜 (Dragon Shield), 火 (Flame Grass / Dragon Grass), and multiple 弟 seals greatly reduces fire damage.<br>That said, the easiest way to deal with it would be to thrown an Extinction Scroll at it.<br>Its has a low spawn rate and is often generated while sleeping, so you might not encounter very many if you're lucky.</p>
+          <p>Rancor Slug not only lowers strength, but can also divide when it takes damage, causing another one to be generated.<br>The second half of the dungeon will be quite difficult if your strength gets lowered here, so be sure to equip<br>a Salty Bracelet if you have one, and use items like Seal Staff if you haven't found the bracelet yet.</p>
+          <p>Waterways are more common from this point, along with amphibian element monsters like Orcan and Adm. Spearfish.<br>Armordillo Pop also makes an appearance, so don't let your guard down if you don't have a Balance Staff.<br>You really don't want to drop items in water or have pots shatter as a result of being tripped.<br>If you're worried about item loss, simply cut the exploration short and proceed to the next floor.</p>
+          <p>Orcans generally behave in the same manner as the Spearfish family, and can restore HP when its underwater.<br>However, it can perform a jumping attack that deals x2 damage when it's underwater,<br>so avoid walking through hallways surrounded by water when your HP is low.<br>Use arrows to defeat it when it tries to run away to heal.</p>
           <h4 id="floor_30_39_preparing">Preparing for the Second Half</h4>
-          <p></p>
+          <p>Monster attack strength is generally calmer here compared to 22~29F, and Mixermon continues to appear,<br>so take some time to collect items, synthesize equipment, and gain experience points.<br>You can likely get by fine with the minimum of 回 (Healing Sword) and 三 (Razor Wind) seals,<br>so it's a good idea to linger on floors until the wind blows if you have the means to keep hunger at bay.</p>
+          <p>That said, the monster table between 31~39F swaps a previous monster out for a new one on each floor,<br>so monsters will gradually get stronger the further you progress on this floor range. (<a href="#monsters">Monsters</a> section for details).<br>Nashaaga (35~43F) may not be as strong as Lashaaga which were inside the second Golden Interval,<br>but they're still among the top threats on this floor range with their high stats and ability to attack twice.<br>If you let your guard down thinking Archdragon is the only real threat, you might find yourself losing strength<br>from slug licks, or losing 1-on-1 fights against the stronger enemies in the second half of this floor range.</p>
+          <p>Monster Pots are more common between 30~59F. (about x8 chance compared to other floors).<br>If you find one, be sure to capture an Armordillo Pop so that you can collect additional items.<br>Also remember that you can use a Posession Staff on an Armordillo Pop to collect items too.<br>Just be careful of Gyairas (30~49F), which can pluck pots and reduce the size by 1,<br>effectively ruining a Monster Pot if the ally monster was outside of it.</p>
+          <p>Shopkeepers level up to Asst. Managers starting on 30F.<br>Asst. Managers reflect magic, so keep that in mind if you plan on using staves to steal from shops.<br>You can use this to your advantage by swinging a Grass Toss Staff at an Asst. Manager to increase your strength.</p>
           <h3 id="floor_40_49">40~49F</h3>
-          <p></p>
+          <p>Monsters include Intolerable Slug (39~47F), Iai (43~55F), and Nigiri Manager (45~57F).</p>
+          <p>Intolerable Slug lowers your max strength by 3 per lick, and can also divide, creating additional copies of itself.<br>Be sure to equip a Salty Bracelet or Scout Bracelet so that you don't get licked by surprise in hallways.<br>Both Rancor Slug and Intolerable Slug appear between 39~40F, so hurry to the stairs if you want to be safe.<br>Keep Warp Grass or Decoy Scroll on hand in case you step on a Summon Trap and get surrounded by slugs.</p>
+          <p>Escargon (40~80F) can warp in front of other monsters and reflect magic bolts from staves back at Shiren.<br>You can swing a Grass Toss Staff at one to give yourself a boost using Strength Grass or Happy Grass.</p>
+          <p>Monsters with decent stats begin to appear all at once from 40F, including Nailed Voodoll, Orcada, and Sea Dragon.<br>You might find the sudden change of the monster table more difficult than the gradual change of 31~39F.</p>
+          <p>As always, it's best to fight Iai with your back facing a wall since you likely won't be able to defeat it in one hit.<br>Losing your equipment here could very well be the end of the run, so always prioritize moving in a way<br>that guarantees safety of flung equipment, even if you have to take a hit in order to do so.<br>There's a chance a defeated Iai will drop a Kengo's Katana, but it doesn't have much use.</p>
+          <p>Nigiri Manager can transform Shiren into a riceball, lowering his defense to 0.<br>It can also transform items into riceballs if Shiren is already a riceball, so seal it or use projectiles from a distance<br>before it gets a chance to use its special attack. A riceball can be thrown to one-shot it, if needed.</p>
+          <p>Devil Kangaroo (30~59F) has a chance to drop an Invisible Staff when it's defeated,<br>which can be used to prevent a monster from using its special attack while the monster is invisible.<br>It's possible to lower the level of a Nigiri Manager to make more riceballs, but the risk is greater than the payoff.</p>
           <h3 id="floor_50_59">50~59F</h3>
           <p></p>
           <h4 id="floor_50_59_monsters">Monsters</h4>
