working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -555,13 +555,13 @@
               <td class="seal_table_scroll">眠</td>
               <td>○</td>
               <td>Slumber Scroll</td>
-              <td>Provides an 8% chance to put the attacking monster to sleep when their regular attack connects.<br>Particularly effective against monster that attack multiple times in the same turn.<br>Makes 1-on-1 fights easier, and also reduces risk for situations like<br>stepping on a Sleep Trap or getting slowed and by a Monarch Tusker.</td>
+              <td>Provides an 8% chance to put the attacking monster to sleep when their regular attack connects.<br>Particularly effective against monster that attack multiple times in the same turn.<br>Makes 1-on-1 fights easier, and also reduces risk for situations like<br>stepping on a Sleep Trap or getting slowed by a Monarch Tusker.</td>
             </tr>
             <tr>
               <td class="seal_table_scroll">金</td>
               <td>×</td>
               <td>Plating Scroll</td>
-              <td>Prevent the loss of upgrade value if you're using a shield other than Ivory Shield or Leather Shield.<br>Nice to have, since Monsoon Doll will erase a red 金 seal before other seals,<br>allowing you to protect against one use of Monsoon Doll's special attack.</td>
+              <td>Prevents the loss of upgrade value if you're using a shield other than Ivory Shield or Leather Shield.<br>Nice to have, since Monsoon Doll will erase a red 金 seal before other seals,<br>allowing you to protect against one use of Monsoon Doll's special attack.</td>
             </tr>
           </table>
           <h3 id="other">Bracelet</h3>
@@ -594,9 +594,9 @@
             <dt>Slow Staff</dt>
             <dd>Allows you to defeat enemies without taking damage by looping attack → step back → attack.<br>Be careful against enemies with ranged attacks, or encountering an enemy in the opposite direction.</dd>
             <dt>Posession Staff</dt>
-            <dd>Among the best staves in the game once you master how to use it.<br>Can be used to level up enemies, guard Shiren while he regenerates HP,<br>collect items by taking control of Armordillo or Kengo family monsters,<br>remove curses from items by taking control of a Straw Voodoll family monster,<br>gather wooden or iron arrows by taking control of a Bow Boy or Bow Cart,<br>obtain riceballs by taking control of a Nigiri Master, or use it to walk while ignoring traps, etc.</dd>
+            <dd>Among the best staves in the game once you master how to use it.<br>Can be used to level up enemies, guard Shiren while he regenerates HP,<br>collect items by taking control of Armordillo or Kengo family monsters,<br>remove curses from items by taking control of a Straw Voodoll family monster,<br>gather wooden or iron arrows by taking control of a Bow Boy or Bow Cart,<br>obtain riceballs by taking control of a Nigiri Manager, or use it to walk while ignoring traps, etc.</dd>
             <dt>Seal Staff</dt>
-            <dd>Prevents a monster from being able to use their special attack.<br>Nice to have when facing Kengo family monsters, Monsoon Doll, Nigiri Master, Tiger Chucker, etc.</dd>
+            <dd>Prevents a monster from being able to use their special attack.<br>Nice to have when facing Kengo family monsters, Monsoon Doll, Nigiri Manager, Tiger Chucker, etc.</dd>
           </dl>
           <h3 id="other">Scroll</h3>
           <dl>
@@ -1626,11 +1626,18 @@
           <p>Nigiri Manager can transform Shiren into a riceball, lowering his defense to 0.<br>It can also transform items into riceballs if Shiren is already a riceball, so seal it or use projectiles from a distance<br>before it gets a chance to use its special attack. A riceball can be thrown to one-shot it, if needed.</p>
           <p>Devil Kangaroo (30~59F) has a chance to drop an Invisible Staff when it's defeated,<br>which can be used to prevent a monster from using its special attack while the monster is invisible.<br>It's possible to lower the level of a Nigiri Manager to make more riceballs, but the risk is greater than the payoff.</p>
           <h3 id="floor_50_59">50~59F</h3>
-          <p></p>
+          <p>The high risk, high reward area of this dungeon. How the second half goes typically comes down to whether or not<br>you managed to get through this area without accidents, and if you were able to successfully obtain items like<br>Strength Grass and Iron Arrows using Schubell and Menbell, along with hunting Mr. Gyro for Revival Grass.</p>
           <h4 id="floor_50_59_monsters">Monsters</h4>
-          <p></p>
+          <p>This floor range has a variety of extremely troublesome monsters, including Iai (43~55F), Nigiri Manager (45~57F),<br>Monsoon Doll (49~59F), Gyandora (50~80F), Tiger Chucker (51~95F), and Spiked Voodoll (50~59F).<br>Tiny Phoenix (50~75F) can heal other monsters, making it harder to defeat them quickly as well.</p>
+          <p>Monsoon Doll can erase a seal from your equipped weapon or shield with its special attack.<br>Losing key seals like 回 or 山 will quickly turn the tide of your adventure for the worse, so you'll want to use<br>arrows to defeat it from a distance, or use an item like Seal Staff to prevent it from using its special attack.<br>On that note, only swing a staff at it when it's right next to you, to prevent Escargon from reflecting the magic bolt.<br>It always erases a red 金 seal first, so you could intentionally have it erase that seal to free up a slot, if desired.</p>
+          <p>Gyandora can pluck equipment or a pot from your inventory, lowering synthesis slots or pot size by 1.<br>This enemy alone is why you need the ト (Walrus Shield) seal to block monsters from stealing your items.<br>If you don't have the ト seal, avoid dashing, and shoot arrows in hallways to try and detect upcoming monsters.<br>Note that the contents of an occupied seal slot or full pot will vanish when it gets plucked.</p>
+          <p>Tiger Chucker can block off escape routes, throw ally monsters onto landmines, or Shiren into a Monster House, etc.<br>It's best to use arrows to defeat it from a distance, or swing a Seal Staff if you meet one in a hallway.<br>Tiger Chucker will be present for most of the dungeon from this point, all the way until 95F.</p>
           <h4 id="floor_50_59_more_items">Obtaining More Items</h4>
-          <p></p>
+          <p>Despite the scary lineup of monsters, this floor range also offers some of the best opportunities to obtain items.</p>
+          <p>Mixergon (50~80F) makes an appearance, allowing you to synthesize items again.<br>However, a Mixergon that has swallowed 4 items is very powerful, so use Slow, Miss, or Quarter staves to weaken it.<br>Also, a <span class="dungeon_desc_warning">Copycat Mask family monster could be disguised as a Mixergon on any floor</span>, so don't throw your equipment first.<br>You can determine if it's a real Mixergon by shooting an arrow (swallows the arrow), or by swinging a Knowledge Staff.<br>It's possible to remove curses before or after synthesis without an Exorcism Scroll by posessing a Spiked Voodoll.</p>
+          <p>Menbell (53~70F) makes an appearance, and is the key to collecting additional items.<br>Use Menbell to obtain Iron Arrows, and lower its level to obtain Strength Grass from Mr. Drone. (see next section)<br>You might get lucky and obtain Revival Grass from a passing Mr. Gyro while hunting summoned monsters, too.</p>
+          <p>Mr. Gyro (50~59F) makes an appearance, and has a 75% chance to drop Revival Grass when defeated.<br>Chase it down if you see one, as stocking up on Revival Grass greatly increases the chance of clearing this dungeon.<br>Mr. Gyro and Menbell overlap between 53~60F, so it's a great opportunity to hunt both Mr. Drones and Mr. Gyros.</p>
+          <p>Cranky Tank (55~77F) makes an appearance, and deals a fixed 20 damage per cannonball explosion.<br>Bracelets have a higher chance of cracking from explosion damage, so be sure to unequip important ones,<br>especially if you don't have any Plating Scrolls on hand to repair cracked bracelets.<br>That said, bracelets never shatter from explosion damage, so you don't need to unequip cracked bracelets.<br>You can level down a Cranky Tank into a Boy Cart to collect Iron Arrows, if desired.</p>
           <h4 id="floor_50_59_mr_drone">Mr. Drone Hunting</h4>
           <p></p>
           <h3 id="floor_60_69">60~69F</h3>
