working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1572,7 +1572,6 @@
             </dd>
           </dl>
           <p>Hit Schubell with a Poison Arrow Trap between 15~19F, and lure it into a room with a dead end.<br>Then dig out a wall as shown below, and simply defeat the summoned monsters.<br>It's best to do this between 16~18F where there are fewer monsters with dangerous abilities.</p>
-          </pre>
           <pre class="dungeon_diagram">
 
     ■■■■■■■■■
@@ -1639,7 +1638,23 @@
           <p>Mr. Gyro (50~59F) makes an appearance, and has a 75% chance to drop Revival Grass when defeated.<br>Chase it down if you see one, as stocking up on Revival Grass greatly increases the chance of clearing this dungeon.<br>Mr. Gyro and Menbell overlap between 53~60F, so it's a great opportunity to hunt both Mr. Drones and Mr. Gyros.</p>
           <p>Cranky Tank (55~77F) makes an appearance, and deals a fixed 20 damage per cannonball explosion.<br>Bracelets have a higher chance of cracking from explosion damage, so be sure to unequip important ones,<br>especially if you don't have any Plating Scrolls on hand to repair cracked bracelets.<br>That said, bracelets never shatter from explosion damage, so you don't need to unequip cracked bracelets.<br>You can level down a Cranky Tank into a Boy Cart to collect Iron Arrows, if desired.</p>
           <h4 id="floor_50_59_mr_drone">Mr. Drone Hunting</h4>
-          <p></p>
+          <dl>
+            <dt>Necessary Items</dt>
+            <dd>Twisty Grass or Unlucky Staff</dd>
+            <dd>Shield with enough 弟 seals to take 0 damage from Schubell's attacks.</dd>
+          </dl>
+          <p>This technique is used to obtain Strength Grass between 53~60F where Menbell and Mr. Gyro overlap.<br>The idea is to level down a Menbell into a Schubell, and then have it summon Mr. Drones.<br>You'll ideally want somewhere around 30~50 strength for the final part of this dungeon, depending on your weapon.</p>
+          <p>The following diagram shows the setup:</p>
+          <pre class="dungeon_diagram">
+
+    S:Shiren  B:Schubell  ×:Monster Summon Spot
+    ■□□□□□
+    ■××□□□  Shiren can defeat summoned monsters
+    ■BS□□□  in 1 turn in this location.
+    ■××□□□
+    ■□□□□□
+          </pre>
+          <p>However, be careful of the following:<br>・Kengo flinging your shield away. It's best to do this on 56~60F where Iai no longer appears.<br>・Straw Voodoll cursing your equipment. Either fill all synthesis slots, or keep an Exorcism Scroll on hand.<br>・Tiger Tosser throwing you onto visible traps. Use items like Water Pot, Trap Remove Scroll, or<br>Knockback Staff (aim it so the trap hits a monster) to erase the trap beforehand, especially if you see a Pitfall.</p>
           <h3 id="floor_60_69">60~69F</h3>
           <p></p>
           <h3 id="floor_70_85">70~85F</h3>
