working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1656,7 +1656,11 @@
           </pre>
           <p>However, be careful of the following:<br>・Kengo flinging your shield away. It's best to do this on 56~60F where Iai no longer appears.<br>・Straw Voodoll cursing your equipment. Either fill all synthesis slots, or keep an Exorcism Scroll on hand.<br>・Tiger Tosser throwing you onto visible traps. Use items like Water Pot, Trap Remove Scroll, or<br>Knockback Staff (aim it so the trap hits a monster) to erase the trap beforehand, especially if you see a Pitfall.</p>
           <h3 id="floor_60_69">60~69F</h3>
-          <p></p>
+          <p>Projectile zone where Silver Arrows, Stones, and Bombs can fly at you from every direction.</p>
+          <p>Monsters include Horse Shogun (57~73F), Horse Emperor (60~77F), Porkchop (56~71F), Porkton (60~72F),<br>Gorilla Bot (60~74F), Bear Borg (60~76F), Menbell (53~70F), and Bellthoven (60~75F).</p>
+          <p>Archdragon finally exits the monster table from 60F, but Porkchop and Porkton appear,<br>so the threat of getting hit by a ranged attack from outside of view persists.<br>The amount of damage you take from stones can rival Archdragon fire, depending on your shield's strength.<br>It's common to get caught in hallways where you can't heal easily using the 回 seal. If that happens,<br>move toward the source of the throw using a Tunnel Staff or Pickaxe as needed to try and defeat the monster quickly.<br>Expect to use some Revival Grasses from stone tosses, especially if you don't walk in an optimal manner.<br>Lastly, stone tosses won't damage bracelets, so you can keep them equipped while you move toward the source.</p>
+          <p>Watch out for Hyper Gazer (63~90F) if you don't have the 山 seal (Echo Shield).<br>In particular, its hypnosis could result in forcing Shiren to eat valuable Revival Grasses.</p>
+          <p>The risk of item loss is lower here, since monsters like Iai, Nigiri Manager, and Monsoon Dolls no long appear.<br>However, Gyandora and Tiger Chucker continue to make an appearance, and Hyper Gazer is a new addition,<br>so if you only focus on Porkchop and Porkton, you might find yourself being hypnotized or tossed across the map,<br>or your equipment getting ruined by Gyandora and King Shotfish (60~99F).</p>
           <h3 id="floor_70_85">70~85F</h3>
           <p></p>
           <h3 id="floor_86_99">86~99F</h3>
